--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "setup": "./setup.js",
-    "postinstall": "gulp build",
     "start": "gulp",
     "test": "lab -t 100 -S -T ./node_modules/lab-babel -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/",
     "test-client": "lab -t 100 -S -T ./node_modules/lab-babel -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/client-before.js ./test/client/ ./test/client-after.js",
     "test-server": "lab -t 100 -S -T ./node_modules/lab-babel -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/misc/ ./test/server/",
-    "test-cover": "lab -t 100 -S -T ./node_modules/lab-babel -r html -o ./test/artifacts/coverage.html ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/ && open ./test/artifacts/coverage.html"
+    "test-cover": "lab -t 100 -S -T ./node_modules/lab-babel -r html -o ./test/artifacts/coverage.html ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/ && open ./test/artifacts/coverage.html",
+    "postinstall": "gulp build"
   },
   "author": "Brian Castles",
   "license": "MIT",
@@ -43,7 +43,7 @@
     "react": "0.14.x",
     "slug": "0.9.x",
     "vision": "^4.1.0",
-    "visionary": "4.x.x",
+    "visionary": "4.x.x"
   },
   "devDependencies": {
     "babel-core": "6.x.x",
